--- a/src/styles/components/homepage/section_2.scss
+++ b/src/styles/components/homepage/section_2.scss
@@ -2,6 +2,10 @@
   @include xy-grid-container();
 
   padding: 5em 0px 8em;
+  @include breakpoint(large down){
+    padding-left: 0.9375rem;
+    padding-right: 0.9375rem;
+  }
   @include element(title) {
     @extend %title;
     padding: 2em 0;
