--- a/src/styles/components/homepage/studio_floor.scss
+++ b/src/styles/components/homepage/studio_floor.scss
@@ -2,7 +2,10 @@
   @include xy-grid-container();
  
   padding: 5em 0;
-
+  @include breakpoint(large down){
+    padding-left: 0.9375rem;
+    padding-right: 0.9375rem;
+  }
   @include element(container) {
   }
   
